syntax = "proto3";
option go_package = "./;proto";
package proto;

message User {
  string avatar = 1;
  int32 clientId = 2;
  int32 employeeId = 3;
  string nickname = 4;
  string phone = 5;
  string sessionId = 6;
  string token = 7;
  string tokenExpireTime = 8;
  string unionId = 9;
  int32 id = 10;
}


message LoginRequest {
  int32 clientId = 1;
  string phone = 2;
  int32 systemId = 3;
  string verificationCode = 4;
}

message LoginResp {
  string token = 1;
  User user = 2;
}

service Login {
  rpc Login (LoginRequest) returns (LoginResp){}
}